# domain_audit.py

./: .gitignore  Dockerfile  PLAN.md  README.md  config.py  domain_audit.py  pyproject.toml  requirements.txt
modules/: __init__.py
modules/checks/: __init__.py  adcs.py  azure.py  delegation.py  domain.py  exchange.py  laps.py  ldap.py  network.py  password.py  roasting.py  sql.py
src/domain_audit/: __init__.py  config.py  domain_audit.py
src/domain_audit/core/: __init__.py  auth.py  exceptions.py
src/domain_audit/modules/: enumeration.py
src/domain_audit/modules/checks/: __init__.py  access.py  adcs.py  adidns.py  azure.py  bloodhound.py  dc_vulns.py  delegation.py  description.py  domain.py  exchange.py  laps.py  ldap.py  network.py  ntlm.py  outdated.py  password.py  privileged_groups.py  roasting.py  sccm.py  smb.py  sql.py  trusts.py  user_attrs.py  wsus.py
src/domain_audit/output/: __init__.py
src/domain_audit/tools/: powermad.py
src/domain_audit/utils/: dependencies.py  gpttmpl.py  ldap.py  logger.py  output.py  registry_pol.py  security_descriptor.py
tools/: __init__.py  powermad.py
utils/: __init__.py  dns.py  ldap.py  security_descriptor.py
